stats function added

--- a/settings.ini
+++ b/settings.ini
@@ -1,12 +1,12 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
-# lib_name = your_project_name
-# user = your_github_username
-# description = A description of your project
-# keywords = some keywords
-# author = Your Name
-# author_email = email@example.com
-# copyright = Your Name or Company Name
+lib_name = deeplearning
+user = kdorichev
+description = My study of Deep Learning
+keywords = deep learning fastai pytorch
+author = Konstantin Dorichev
+author_email = kdorichev@gmail.com
+copyright = Konstantin Dorichev
 branch = master
 version = 0.0.1
 min_python = 3.6
