Title and Summary added to MNIST via cell, #2

--- a/docs/_data/sidebars/home_sidebar.yml
+++ b/docs/_data/sidebars/home_sidebar.yml
@@ -13,7 +13,7 @@ entries:
       title: Core functions
       url: /core
     - output: web,pdf
-      title: Title
+      title: Image classification with MNIST
       url: /mnist
     output: web
     title: deeplearning
