--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -7,7 +7,7 @@ description: My study of Deep Learning
 # Add Google analytics id if you have one and want to use it here
 google_analytics:
 # See http://nbdev.fast.ai/search for help with adding Search
-google_search:
+google_search: 003331057796599422043:jxhwmtzb92f
 
 host: 127.0.0.1
 # the preview server used. Leave as is.
